# crud-rust

./: Cargo.toml  README.md
src/: main.rs
src/databases/postgres_connection/: mod.rs
src/databases/postgres_connection/migrations/: 0001_usertable.sql  0002_customertable.sql  0003_companytable.sql  0004_rolestable.sql
src/exceptions/: errorHandleMiddleware.rs  mod.rs
src/services/: mod.rs
src/services/auth/: auth.rs  extractorrole.rs  mod.rs  verificationrole.rs
src/services/customer/: dto.rs  mod.rs  models.rs  services.rs
src/services/users/: models.rs  services.rs
src/utils/: response.rs
