[package]
name = "nvimtest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
bcrypt = "0.17.0"
chrono = "0.4.40"
dotenv = "0.15.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
time = { version = "0.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-async-std", "time", "chrono"] }
log = "0.4"
env_logger = "0.11.8"
simplelog = "0.12"
actix-server = "2.5.1"
futures = "0.3.31"
actix-service = "2.0.3"
yoke = "0.8.0"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
